# aegis-ops

./: api.py  main.py  pyproject.toml  render.yaml  requirements.txt  start.sh  ui.py
aegis_core/: graph.py  state.py
